# Brachytherpapy-grupp-3-TANA82

./: README.md  app.py  dose_calculation.py  get_structured_data.py  histogram.py  lpm.py  lpm_calculations.py  mock_dose_data.py  pyproject.toml  vx_dx.py
charts/: lpm_chart.py  points_chart.py  time_array_display.py  vx_dx.py
charts/dose_intervall_table/: dose_intervall.py
charts/lpm_chart/: lpm_chart.py
charts/points_chart/: points_chart.py
data/dosecalculation/: Dosberäkning.docx  Dosintervall.xls  dos_parametrar.mat  mHDRv2_fittab.txt
data/patient_data/raw_data/: patient1.mat  patient2.mat  patient3.mat  patient4.mat  patient5.mat
equations/: dose_calculation.py  lpm_calculations.py
