[tool.poetry]
name = "lasso-regression-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
numpy = "^2.3.3"
streamlit = "^1.50.0"
streamlit-echarts = "^0.4.0"
xlrd = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
